refactor contact api
